samples/_failures_safe/1761001962_21ea6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53dea268.c: In function ‘main’:
./samples/SAFE/__tmp_53dea268.c:163:5: error: expected expression at end of input
  163 |     const char* algorithm_names[] = {
      |     ^~~~~
./samples/SAFE/__tmp_53dea268.c:163:5: error: expected declaration or statement at end of input
